# python-serverless-openapi-documentation

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml
adr/: 0001-port-from-javascript-to-python.md
src/: openapi_generator.py
src/serverless_openapi_generator/: docs_extractor.py  endpoint_mapper.py  openapi_generator.py  owasp.py  pydantic_handler.py  python_discovery.py  schema_handler.py
test/: test_generator.py  test_owasp.py  test_python_generator.py  test_schema_handler.py
test/json/: expected_from_serverless_1.json
test/serverless-tests/extensions/: serverless.yml
test/serverless-tests/inferred/: serverless.yml
test/serverless-tests/owasp/: serverless.yml
test/serverless-tests/security/: serverless.yml
test/tmp_project/my_endpoint/: docs.py  handler.py
