[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serverless-openapi-generator"
version = "1.0.0"
authors = [
  { name="Cline", email="cline@example.com" },
]
description = "A standalone tool to generate OpenAPI schemas from serverless.yml files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "requests",
    "referencing",
    "jsonschema-spec",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openapi-gen = "serverless_openapi_generator.openapi_generator:main"
